@@ -6,29 +6,21 @@
 
 #include <QWidget>
 
-class EventCallback:public QObject,public ICallBack
-{
-	Q_OBJECT
-	public:
-		void callBack(const void *callerdata,void *userdata);
-	signals:
-		void keystateupdated(int ch,int key,bool state);
-};
-
 class qmpKeyboardWindow:public QWidget
 {
 	Q_OBJECT
-	friend class EventCallback;
 	private:
 		qmpPianoWidget *pw[16];
 		qmpPluginAPI *api;
-		EventCallback *ec;
+		int eh;
 	public:
 		qmpKeyboardWindow(qmpPluginAPI *_api,QWidget *parent);
 		~qmpKeyboardWindow();
 		void resetAll();
 	protected:
 		void closeEvent(QCloseEvent *event);
+	signals:
+		void keystateupdated(int ch,int key,bool state);
 	public slots:
 		void onkeystatesupdate(int ch,int key,bool state);
 };
